creacion de atributos al administrador