@@ -1,74 +1,75 @@
 package controlador;
 
-import java.io.IOException;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-
-import conexion.conexionDB;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.*;
+import java.io.IOException;
+import java.security.MessageDigest;
+import modelo.Usuario;
+import dao.UsuarioDAO;
 
-@WebServlet("/LoginControlador")
+@WebServlet("/login")
 public class LoginControlador extends HttpServlet {
-    private static final long serialVersionUID = 1L;
 
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
 
-        String correo = request.getParameter("correo");
-        String contraseña = request.getParameter("contraseña");
+        request.setCharacterEncoding("UTF-8");
 
-        // Validación rápida de parámetros
-        if (correo == null || correo.isBlank() || contraseña == null || contraseña.isBlank()) {
-            request.setAttribute("error", "Por favor ingrese correo y contraseña.");
+        String email = request.getParameter("email");
+        String password = request.getParameter("password");
+
+        if (email == null || email.trim().isEmpty()
+                || password == null || password.trim().isEmpty()) {
+            request.setAttribute("error", "Ingrese correo y contraseña.");
             request.getRequestDispatcher("login.jsp").forward(request, response);
             return;
         }
 
-        String sql = "SELECT id_usuario, nombre, rol FROM usuarios WHERE correo = ? AND contraseña = ?";
+        // Hashea la contraseña con SHA-256
+        String hashedPassword = hashSHA256(password);
 
-        try (Connection conn = conexionDB.getConnection();
-             PreparedStatement ps = conn.prepareStatement(sql)) {
+        UsuarioDAO dao = new UsuarioDAO();
+        Usuario usuario = dao.validarLogin(email, hashedPassword);
 
-            ps.setString(1, correo.trim());
-            ps.setString(2, contraseña.trim()); // 🔒 En producción usar hash (ej: BCrypt)
+        if (usuario != null) {
+            HttpSession session = request.getSession();
+            session.setAttribute("usuario", usuario.getNombre());
+            session.setAttribute("rol", usuario.getRol());
 
-            try (ResultSet rs = ps.executeQuery()) {
-                if (rs.next()) {
-                    int idUsuario = rs.getInt("id_usuario");
-                    String nombre = rs.getString("nombre");
-                    String rol = rs.getString("rol");
-
-                    // Crear sesión segura
-                    HttpSession session = request.getSession(true);
-                    session.setAttribute("id_usuario", idUsuario);
-                    session.setAttribute("nombre_usuario", nombre);
-                    session.setAttribute("rol_usuario", rol);
-
-                    // 🔐 Recomendación: configurar tiempo de expiración de sesión
-                    session.setMaxInactiveInterval(30 * 60); // 30 minutos
-
-                    // Redirigir según rol
-                    if ("admin".equalsIgnoreCase(rol)) {
-                        response.sendRedirect("administrar_productos.jsp");
-                    } else {
-                        response.sendRedirect("index.jsp");
-                    }
-                } else {
-                    // Usuario o clave incorrecta
-                    request.setAttribute("error", "⚠️ Correo o contraseña incorrectos.");
-                    request.getRequestDispatcher("login.jsp").forward(request, response);
-                }
+            // Redirección según rol
+            if ("administrador".equalsIgnoreCase(usuario.getRol())) {
+                response.sendRedirect(request.getContextPath() + "/administrar_productos.jsp");
+            } else {
+                response.sendRedirect(request.getContextPath() + "/index.jsp");
             }
 
-        } catch (SQLException e) {
-            e.printStackTrace();
-            request.setAttribute("error", "❌ Error en la base de datos.");
+        } else {
+            request.setAttribute("error", "Correo o contraseña incorrectos.");
             request.getRequestDispatcher("login.jsp").forward(request, response);
+        }
+    }
+
+    @Override
+    protected void doGet(HttpServletRequest request, HttpServletResponse response)
+            throws ServletException, IOException {
+        response.sendRedirect(request.getContextPath() + "/login.jsp");
+    }
+
+    // Método para generar hash SHA-256
+    private String hashSHA256(String input) {
+        try {
+            MessageDigest md = MessageDigest.getInstance("SHA-256");
+            byte[] resultado = md.digest(input.getBytes("UTF-8"));
+            StringBuilder sb = new StringBuilder();
+            for (byte b : resultado) {
+                sb.append(String.format("%02x", b));
+            }
+            return sb.toString();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return input;
         }
     }
 }
